--- a/src/app/modules/commons/users/mainProfile.html
+++ b/src/app/modules/commons/users/mainProfile.html
@@ -37,9 +37,9 @@
 
                         <div class="col m4 s12">
                             <br/>
-                            
-                                <i class="material-icons md-48 dark-text-color">verified_user</i>
-                            
+                            <a href="#/private/billing" class="waves-effect waves-light accent-text-color">
+                                <i class="material-icons md-48">verified_user</i>
+                            </a>
                             <br/>
                             {{'profileMainPage.tabs.billing' | translate }}
                             <br/>
