QHBWEB-172 : Migration stripe - Notifications et gestion de l'annulation de la souscription via Stripe

--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -163,7 +163,7 @@
     </div>
 </div>
 
-<div class="navbar-fixed trial-banner" ng-if="!hideTrial && menuItem !== 'billing'">
+<div class="navbar-fixed trial-banner" ng-if="user && !hideTrial && menuItem !== 'billing'">
     <div class="row light-primary-color">
         <div class="col s12 center"><h4 translate="headerMenu.trial.title"></h4></div>
         <div class="col s12 secondary-text-color center" translate="headerMenu.trial.content"
