QHBWEB-172 : Migration stripe

--- a/src/app/modules/commons/users/billing/billing.html
+++ b/src/app/modules/commons/users/billing/billing.html
@@ -22,7 +22,10 @@
                     <h6>{{plan.activity.label | translate}}</h6>
                 </div>
                 <div class="col m2 center-align accent-text-color">
-                    <h6>{{plan.levelPlan}} </h6>
+                    <h6>{{plan.levelPlan}}<br/>
+                        <small translate="{{'billingPage.label.status.' + plan.status}}"
+                               translate-values="{value: plan.formatedEndTrialDate}"></small>
+                    </h6>
                 </div>
 
                 <div ng-if="plan.status === 'open' || plan.status === 'canceled'" class="col m8 center-align">
@@ -30,20 +33,19 @@
                        translate="billingPage.label.pay.title">
                     </a>
                 </div>
-                <div ng-if="plan.status !== 'open' && plan.status !== 'canceled'">
-                    <div class="col m1 center-align"><span ng-bind="plan.amountPaid"></span> €</div>
+                <div ng-if="plan.status !== 'canceled' && plan.status !== 'open'">
+                    <div class="col m1 center-align"><span
+                            ng-bind="plan.amountPaid"></span> €
+                    </div>
                     <div class="col m2 center-align">
                         <small ng-bind="plan.paymentId"></small>
                     </div>
-                    <div class="col m2 center-align" ng-if="plan.status!=='trialing' && plan.status!=='canceled'">
+                    <div class="col m2 center-align"
+                         ng-if="plan.status!=='trialing' && plan.status!=='canceled'">
                         {{plan.paidDate | date}}
                     </div>
                     <div class="col m2 center-align" ng-if="plan.status==='canceled'"></div>
-                    <div class="col m2 center-align" ng-if="plan.status==='trialing'"
-                         translate="billingPage.label.trial"></div>
                     <div ng-bind="'xxxx xxxx xxxx ' + plan.cardInfo.last4" class="col m2 center-align"></div>
-                    <span class="badge white-text"
-                          ng-class="{'green': plan.status === 'trialing', 'red': plan.status === 'canceled'}">{{plan.status}}</span>
                 </div>
             </div>
         </div>
@@ -54,7 +56,9 @@
         <div class="col s12">
             <div ng-repeat="plan in user.account.listPlan track by $index" class="light-primary-color row">
                 <h6 class="col s6 center-align">{{plan.activity.label | translate}}</h6>
-                <h6 class="col s6 center-align accent-text-color">{{plan.levelPlan}}</h6>
+                <h6 class="col s6 center-align accent-text-color">{{plan.levelPlan}}<br/>
+                    <small translate="{{'billingPage.label.status.' + plan.status}}"
+                           translate-values="{value: plan.formatedEndTrialDate}"></small></h6>
                 <div ng-if="plan.status === 'open' || plan.status === 'canceled'" class="col s12">
                     <a href="#/private/billing/pay/{{$index}}" class="btn waves-effect waves-white secondary-color"
                        translate="billingPage.label.pay">
@@ -68,9 +72,6 @@
                     <div class="col s6 center-align" ng-if="plan.status==='trialing'"
                          translate="billingPage.label.trial"></div>
                         <div class="col s6 center-align"><small>{{plan.paymentId}}</small></div>
-
-                    <span class="badge white-text"
-                          ng-class="{'green': plan.status === 'trialing', 'red': plan.status === 'canceled'}">{{plan.status}}</span>
                 </span>
             </div>
         </div>
