--- a/src/app/modules/commons/users/signup/signupEndDone.html
+++ b/src/app/modules/commons/users/signup/signupEndDone.html
@@ -28,8 +28,8 @@
             </div>
             <div class="row">
                 <div class="center col s12">
-                    <a href="getLink()" class="btn white-text accent-color"
-                       translate="signupStartDonePage.buttonHome"></a>
+                    <button ng-click="getLink()" class="btn white-text accent-color"
+                       translate="signupStartDonePage.buttonHome"></button>
                 </div>
             </div>
         </div>
