--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -163,7 +163,7 @@
     </div>
 </div>
 
-<div class="navbar-fixed trial-banner" ng-if="user && !hideTrial && menuItem !== 'billing'">
+<div class="navbar-fixed trial-banner" ng-if="user && !hideTrial && menuItem !== 'billing' && menuItem !== 'signup'">
     <div class="row light-primary-color">
         <div class="col s12 center"><h4 translate="headerMenu.trial.title"></h4></div>
         <div class="col s12 secondary-text-color center" translate="headerMenu.trial.content"
@@ -318,6 +318,30 @@
         <div class="col s12">
             <a href="#/" class="modal-action modal-close waves-effect waves-white btn dark-primary-color"
                translate="commons.buttons.close"></a>
+        </div>
+    </div>
+</div>
+<!-- Register-mail Resend ! -->
+<div id="modalMailResend" class="modal light-primary-color">
+    <div class="modal-header center-align">
+        <h5>
+            <span class="fa fa-sign-in"></span>
+            <span translate="modal.login.messageControl.unregistreduser.title"></span>
+        </h5>
+    </div>
+    <div class="modal-content white">
+        <div class="row">
+            <div class="col s12" translate="modal.login.messageControl.unregistreduser.content"></div>
+        </div>
+    </div>
+    <div class="row center">
+        <div class="col s12"></div>
+        <div class="col s12"><a href="#/" class="modal-action modal-close waves-effect waves-white btn light-primary-color"
+                                translate="commons.buttons.cancel"></a>
+            <button type="submit" class="btn waves-effect waves-white secondary-color"
+                    ng-click="mailResend()"
+                    translate="commons.buttons.validate">
+            </button>
         </div>
     </div>
 </div>
