--- a/src/app/components/directives/public/pricing/pricing.html
+++ b/src/app/components/directives/public/pricing/pricing.html
@@ -12,12 +12,12 @@
             <div class="row">
                 <div class="col s12">
                     <div class="card-title dark-primary-color">
-                        <img src="../../../assets/images/icons/home-camera-M.png" title="{{'landing.part-2.capture' | translate}}" width="25%" height="25%" class="hide-on-med-and-up"> &nbsp;
-                        <img src="../../../assets/images/icons/home-stats-M.png" title="{{'landing.part-2.analyze' | translate}}" width="25%" height="25%" class="hide-on-med-and-up"> &nbsp;
-                        <img src="../../../assets/images/icons/home-progress-M.png" title="{{'landing.part-2.progress' | translate}}" width="25%" height="25%" class="hide-on-med-and-up">
-                        <img src="../../../assets/images/icons/home-camera-M.png" title="{{'landing.part-2.capture' | translate}}" class="hide-on-small-only"> &nbsp;
-                        <img src="../../../assets/images/icons/home-stats-M.png" title="{{'landing.part-2.analyze' | translate}}" class="hide-on-small-only"> &nbsp;
-                        <img src="../../../assets/images/icons/home-progress-M.png" title="{{'landing.part-2.progress' | translate}}" class="hide-on-small-only">
+                        <img src="assets/images/icons/home-camera-M.png" title="{{'landing.part-2.capture' | translate}}" width="25%" height="25%" class="hide-on-med-and-up"> &nbsp;
+                        <img src="assets/images/icons/home-stats-M.png" title="{{'landing.part-2.analyze' | translate}}" width="25%" height="25%" class="hide-on-med-and-up"> &nbsp;
+                        <img src="assets/images/icons/home-progress-M.png" title="{{'landing.part-2.progress' | translate}}" width="25%" height="25%" class="hide-on-med-and-up">
+                        <img src="assets/images/icons/home-camera-M.png" title="{{'landing.part-2.capture' | translate}}" class="hide-on-small-only"> &nbsp;
+                        <img src="assets/images/icons/home-stats-M.png" title="{{'landing.part-2.analyze' | translate}}" class="hide-on-small-only"> &nbsp;
+                        <img src="assets/images/icons/home-progress-M.png" title="{{'landing.part-2.progress' | translate}}" class="hide-on-small-only">
                     </div>
 
                     <div class="card-content dark-text-color white" >
@@ -38,8 +38,8 @@
                             <div class="col s12 l6">
                                 <div class="row"> 
                                     <div class="col s4">
-                                        <img src="../../../assets/images/icons/pricing-http-M.png" width="90%" height="90%" class="hide-on-med-and-up">
-                                        <img src="../../../assets/images/icons/pricing-http-M.png" class="hide-on-small-only">
+                                        <img src="assets/images/icons/pricing-http-M.png" width="90%" height="90%" class="hide-on-med-and-up">
+                                        <img src="assets/images/icons/pricing-http-M.png" class="hide-on-small-only">
                                     </div>
                                     <div class="col s8 left-align secondary-text-color">
                                         <h5>{{'pricing.offers.standard.appWeb' | translate}}</h5>
@@ -51,8 +51,8 @@
 
                                 <div class="row">
                                     <div class="col s4">
-                                        <img src="../../../assets/images/icons/pricing-teams-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-                                        <img src="../../../assets/images/icons/pricing-teams-M.png" class="hide-on-small-only">
+                                        <img src="assets/images/icons/pricing-teams-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="assets/images/icons/pricing-teams-M.png" class="hide-on-small-only">
                                     </div>
                                     <div class="col s8 left-align">
                                         <h5>{{'pricing.offers.standard.teamWeb.title' | translate}}</h5>
@@ -61,8 +61,8 @@
                                 </div>
                                 <div class="row">    
                                     <div class="col s4">
-                                        <img src="../../../assets/images/icons/pricing-agenda-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-                                        <img src="../../../assets/images/icons/pricing-agenda-M.png" class="hide-on-small-only">
+                                        <img src="assets/images/icons/pricing-agenda-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="assets/images/icons/pricing-agenda-M.png" class="hide-on-small-only">
                                     </div>
                                     <div class="col s8 left-align">    
                                         <h5>{{'pricing.offers.standard.agendaWeb.title' | translate}}</h5>
@@ -71,8 +71,8 @@
                                 </div>
                                 <div class="row">
                                     <div class="col s4">
-                                        <img src="../../../assets/images/icons/pricing-stats-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-                                        <img src="../../../assets/images/icons/pricing-stats-M.png" class="hide-on-small-only">
+                                        <img src="assets/images/icons/pricing-stats-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="assets/images/icons/pricing-stats-M.png" class="hide-on-small-only">
                                     </div>
                                     <div class="col s8 left-align">
                                         <h5>{{'pricing.offers.standard.statsWeb.title' | translate}}</h5>
@@ -81,8 +81,8 @@
                                 </div>    
                                 <div class="row">
                                     <div class="col s4">
-                                        <img src="../../../assets/images/icons/pricing-share-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-                                        <img src="../../../assets/images/icons/pricing-share-M.png" class="hide-on-small-only">
+                                        <img src="assets/images/icons/pricing-share-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="assets/images/icons/pricing-share-M.png" class="hide-on-small-only">
                                     </div>
                                     <div class="col s8 left-align">
                                         <h5>{{'pricing.offers.standard.shareWeb.title' | translate}}</h5>
@@ -95,8 +95,8 @@
                             <div class="col s12 l6">
                                 <div class="row"> 
                                     <div class="col s4">
-                                        <img src="../../../assets/images/icons/pricing-mobile-M.png" width="90%" height="90%" class="hide-on-med-and-up">
-                                        <img src="../../../assets/images/icons/pricing-mobile-M.png" class="hide-on-small-only">
+                                        <img src="assets/images/icons/pricing-mobile-M.png" width="90%" height="90%" class="hide-on-med-and-up">
+                                        <img src="assets/images/icons/pricing-mobile-M.png" class="hide-on-small-only">
                                     </div>
                                     <div class="col s8 left-align secondary-text-color">
                                         <h5>{{'pricing.offers.standard.appMob' | translate}}</h5>
@@ -107,8 +107,8 @@
                                 </div>
                                  <div class="row">
                                     <div class="col s4">
-                                        <img src="../../../assets/images/icons/pricing-teams-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-                                        <img src="../../../assets/images/icons/pricing-teams-M.png" class="hide-on-small-only">
+                                        <img src="assets/images/icons/pricing-teams-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="assets/images/icons/pricing-teams-M.png" class="hide-on-small-only">
                                     </div>
                                     <div class="col s8 left-align">
                                         <h5>{{'pricing.offers.standard.teamMob.title' | translate}}</h5>
@@ -117,8 +117,8 @@
                                 </div>
                                 <div class="row">    
                                     <div class="col s4">
-                                        <img src="../../../assets/images/icons/pricing-agenda-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-                                        <img src="../../../assets/images/icons/pricing-agenda-M.png" class="hide-on-small-only">
+                                        <img src="assets/images/icons/pricing-agenda-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="assets/images/icons/pricing-agenda-M.png" class="hide-on-small-only">
                                     </div>
                                     <div class="col s8 left-align">    
                                         <h5>{{'pricing.offers.standard.agendaMob.title' | translate}}</h5>
@@ -127,8 +127,8 @@
                                 </div>
                                 <div class="row">
                                     <div class="col s4">
-                                        <img src="../../../assets/images/icons/pricing-stats-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-                                        <img src="../../../assets/images/icons/pricing-stats-M.png" class="hide-on-small-only">
+                                        <img src="assets/images/icons/pricing-stats-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="assets/images/icons/pricing-stats-M.png" class="hide-on-small-only">
                                     </div>
                                     <div class="col s8 left-align">
                                         <h5>{{'pricing.offers.standard.statsMob.title' | translate}}</h5>
@@ -137,8 +137,8 @@
                                 </div>
                                 <div class="row">    
                                     <div class="col s4">
-                                        <img src="../../../assets/images/icons/pricing-camera-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-                                        <img src="../../../assets/images/icons/pricing-camera-M.png" class="hide-on-small-only">
+                                        <img src="assets/images/icons/pricing-camera-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="assets/images/icons/pricing-camera-M.png" class="hide-on-small-only">
                                     </div>
                                     <div class="col s8 left-align">    
                                         <h5>{{'pricing.offers.standard.collectMob.title' | translate}}</h5>
@@ -156,7 +156,7 @@
                         <div class="row" ng-if="subscribeButton">
                             <div class="center-align col s12"> 
                                 <a class="btn waves-effect waves-light accent-color"
-                                    href="#/signupStart" translate="pricing.subscribe-btn">
+                                    href="#/signup" translate="pricing.subscribe-btn">
                                 </a>
                             </div>
                         </div>
